--- a/style.css
+++ b/style.css
@@ -1,58 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-   
-}
-body{
-    font-family: "Be Vietnam Pro", sans-serif;
-    box-sizing: border-box;
-    width: 100vw;
-    height: 100vh;
+    font-family: "Poppins", sans-serif;
 }
 #wrapper{
-    height: 100vh;
-    overflow-y: auto;
-    overflow-x: hidden;
+  height: 100vh;
+  overflow-y: hidden;
+  overflow-y: auto;
 }
 .container{
-     width: 1200px;
-     margin: 0 auto;
+    width: 1200px;
+    margin: 0 auto;
 }
 .navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 0;
-}
-.logo{
-    font-size: 32px;
-    font-weight: bold;
-}
-.logoS{
-    font-size: 48px;
-}
 
-.navlinks{
-   
-    align-items: center;
-    display: flex;
-    gap: 24px;
-    font-size: 18px;
-    /* justify-content: space-between; */
 }
-li{
-    list-style: none;
-    
-    display: inline-block; 
-}
-.navlinks li a{
-    transition: all 0.4s ease;
-    text-decoration: none;
-    color: black;
-}
-.navlinks li a:hover{
-    font-weight: bold;
-}
-
