--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
     list-style: none;
     text-decoration: none;
 }
+:root{
+    --bg-orange: #ff3700;
+}
 #wrapper{
   height: 100vh;
   overflow-y: hidden;
@@ -38,7 +41,8 @@
     justify-content: center;
     align-items: center;
     gap: 30px;
-}
+}  
+
 .nav-links li a{
     font-size: 18px;
     cursor: pointer;
@@ -49,4 +53,202 @@
 .nav-links li a:hover {
     transition: all 0.3s ease;
     font-weight: 500;
+}
+
+/* hero section */
+.hero-section{
+    position: relative;
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+    justify-content: space-between;
+    gap: 5rem;
+    margin: 4rem auto;
+    padding: 0 1rem;
+    padding-bottom: 8rem;
+    transition: all 0.10s ease;
+}
+.faded-text{
+    position: absolute;
+    user-select: none;
+    font-size: 7em;
+    color: rgb(231, 231, 231);
+    bottom: -16%;
+    left: 2%;
+    font-weight: 600;
+    transition: all 3s;
+}
+.left-hero-section{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.hero-heading{
+    font-size: 35px;
+    font-weight: 500;
+    color:#343d68;
+}
+.hero-subheading{
+    font-size: 35px;
+    font-weight: 500;
+}
+.role{
+    color: #1a09b7;
+    font-size: 40px;
+    line-height: 45px;
+}
+.hero-description{
+    font-size: 18px;
+    color: #5a5a5a;
+    line-height: 30px;
+    font-weight: 500;
+    width: 70%;
+}
+/* button property added here buttuon transiton from left to right */
+.btn-pink{
+    background-color: var(--bg-orange);
+    width: fit-content;
+    color: white;
+    padding: 0.8rem 2.3rem;
+    box-shadow: 5px 5px 7px 0px #0000003f;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: 500;
+    border: solid 3px transparent;
+    position: relative;
+    z-index: 1;
+}
+.btn-pink::before{
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: 0;
+    right: 0;
+    bottom: 0px;
+    transform-origin: left;
+    transform: scaleX(0);
+    background-color: white;
+    z-index: -1;
+    transition: all 0.8s;
+}
+.btn-pink:hover::before{
+    transform: scaleX(1);
+  
+}
+.btn-pink:hover{
+    transition: all 0.8s;
+    color: black;
+    border: solid 3px var(--bg-orange);
+    /* box-shadow: none; */
+}
+
+/* right section that image with some animation */
+.right-hero-section{
+    position: relative;
+}
+.absolute{
+    position: absolute;
+    z-index: 10;
+}
+.user-image{
+    padding: 2.2rem;
+    filter: grayscale(1);
+    transition: all 1s ease;
+    animation: scaleImage 5s linear infinite;
+    /* border-radius:20px ; */
+    
+}
+.user-image img{
+    z-index: -8;
+    /* border-radius: 20px; */
+}
+/* animation for user image */
+@keyframes scaleImage{
+    0%{
+        filter: grayscale(1);
+        transform: scale(1);
+    }
+    50%{
+        filter: grayscale(0);
+        transform: scale(1.1);
+        box-shadow: 5px 5px 10px #000000;
+    }
+    100%{
+        transform: scale(1);
+       
+    }
+    
+}
+/* dots that are moving up and down */
+.icon-dots{
+    bottom: -1rem;
+    right: 0;
+    animation: dotanimation;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-delay: 0.07s;
+}
+@keyframes dotanimation{
+    0%{
+       transform: translateY(0);
+    }
+    50%{
+        transform: translateY(-20px);
+    }
+    100%{
+        transform:translateY(0);  
+    }
+}
+/* cube that is top right 0 */
+.icon-cube{
+    top: -1rem;
+    right: 0;
+    animation:cuberotate;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-delay: 0.07s;
+}
+/* animation that cube is rotating in Y axis start 0 and 180 then again 0 and moving along the y axix up down */
+@keyframes cuberotate{
+    0%{
+        transform: rotateY(0deg) translateY(0);
+        
+    }
+    50%{
+        transform: rotateY(180deg)  translateY(-14px);
+        
+    }
+    100%{
+        transform: rotateY(0deg) translateY(0);
+        
+    }
+}
+
+/* circle that is in the bottom left 0 and it is shake effect*/
+.icon-circle{
+    bottom: -0.7rem;
+    left: -1rem;
+    animation: circleshake;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    /* animation-delay: 0.07s; */
+} 
+@keyframes circleshake{
+    0%{
+        left: 0;
+        bottom: 0;
+    }
+    50%{
+        left: 5%;
+        bottom: 10%;
+    }
+    100%{
+        left: 0;
+        bottom: 0;
+    }
+
+}
+.icon-zigzags{
+   top: 0;
+   left: 0;
 }
